Fix spacing for labels
Task Labels lacked some spacing in-between them, which we added.

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -85,6 +85,7 @@
 
 .task_label {
   padding: 5px;
+  margin-left: 5px;
   font-size: 80%;
   display: inline;
   font-weight: bold;
